[gd_scene load_steps=7 format=3 uid="uid://bq43rchs2nsky"]

[ext_resource type="Script" path="res://lib/controllers/character_controller.gd" id="1_0epxx"]
[ext_resource type="Shader" path="res://materials/circle_shader.gdshader" id="2_8pok7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dciqb"]
render_priority = 0
shader = ExtResource("2_8pok7")

[sub_resource type="QuadMesh" id="QuadMesh_mkd3l"]
material = SubResource("ShaderMaterial_dciqb")
size = Vector2(0.7, 0.7)
orientation = 1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kc6in"]
margin = 0.0
radius = 0.12

[sub_resource type="SphereShape3D" id="SphereShape3D_3dxkj"]
radius = 7.0

[node name="CharacterController" type="CharacterBody3D"]
script = ExtResource("1_0epxx")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
target_position = Vector3(0, -3, 0)
collision_mask = 4

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = 0.45
height = 3.0
radius = 0.35
time_horizon_agents = 2.0
max_speed = 4.0
debug_enabled = true

[node name="SelectionCircle" type="MeshInstance3D" parent="."]
transform = Transform3D(1.00588, 0, 0, 0, 1.00588, 0, 0, 0, 1.00588, 0, 0.1, 0)
visible = false
layers = 2
cast_shadow = 0
gi_mode = 0
mesh = SubResource("QuadMesh_mkd3l")

[node name="StaticNavigationBody" type="StaticBody3D" parent="."]
collision_layer = 2
collision_mask = 2
input_ray_pickable = false

[node name="StaticCollisionShape" type="CollisionShape3D" parent="StaticNavigationBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.965942, 0)
shape = SubResource("CapsuleShape3D_kc6in")

[node name="SightArea" type="Area3D" parent="."]
collision_layer = 8
input_ray_pickable = false

[node name="SightAreaShape" type="CollisionShape3D" parent="SightArea"]
shape = SubResource("SphereShape3D_3dxkj")

[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_apply_final_velocity"]
